[package]
edition = "2021"
name = "backtracetk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive", "wrap_help"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
termcolor = "1.4.1"
termion = "4.0.2"
toml = "0.8.14"
